--- a/source/_posts/2013-04-10-la-meta.markdown
+++ b/source/_posts/2013-04-10-la-meta.markdown
@@ -109,9 +109,8 @@ es productivo, todo aquello que no la lleve es imprductivo.
 
 * Gastos de operación: todo el dienro que el sistema gasta para convertir el inventario en ingresos netos.
 
-
 ## Otras lecturas y enlaces relacionadas
 
 * [Lean software development](/blog/2012/10/10/lean-software-development/), de Mary y Tom Poppendiek.
 * [Roberto Hens](https://plus.google.com/105077077543737057709) también lo ha leído, y esto es lo que le parece: 
-[Kanban, el origen](http://robertohens.blogspot.com.es/2013/04/Kanban-el-Origen-The-Goal.html).
+* [Kanban, el origen](http://robertohens.blogspot.com.es/2013/04/Kanban-el-Origen-The-Goal.html).
