--- a/source/_POSTS_INCUBATOR/2014-11-27-codemotion-2014.markdown
+++ b/source/_POSTS_INCUBATOR/2014-11-27-codemotion-2014.markdown
@@ -193,45 +193,37 @@ aprende > practica > crea > comparte > ayuda
 
 Proyecto en el que está trabajando la ponente: [https://github.com/Khan/live-editor]
 
-### Analizando y debuggeando tu plataforma, Luis Bosque (@luisico), CartoDB
+### Analizando y debuggeando tu plataforma, Luis Bosque
 
+Opinión: esperaba algo diferente de la charla, no sé muy bien el qué, pero algo 
+diferente. Con todo esto, estuvo muy bien. Multitud de herramientas, multitud de
+consejos y muchos ejemplos reales usados en CartoDB.
 
+No valen las sensaciones, debes analizar tu plataforma para saber cómo se comportan
+tus usuarios y para saber cómo afectan los cambios que haces.
 
-VOY               POR            AQUI
+No hay un manual sobre que medir, pero no hay que medir todo.
 
-
-
-
-
-Saber cómo se comportan tus usuarios
-
-Saber como afectan los cambios que haces
-
-No valen sensaciones
-
-No hay un manual sobre que medir, pero no hay que medir todo
-
-Analisis corto plazo : monitoring, alerting
+Analisis corto plazo : monitoring, alerting.
 
 Analisis medio plazo : buscar patrones de uso, optimizar para su uso. Análisis de casos
-
 especiales te pueden llevar a optimizaciones a incorporar
 
-Stadísticas al usuario :
+Stadísticas al usuario:
 
 - tiempo de sus queries en ejecutarse
-- no visualizaciones de su app
+- número de visualizaciones de su app
 - widgets más usados
 
 Herramientas análisis logs : logstash, fluentd, splunk, syslog
 
-No volverte loco con las métricas, qué precisión quieres (queries de mas de 30seg), retención de
-
+No volverte loco con las métricas, no se puede medir todo, debes decidir qué 
+precisión quieres (queries de mas de 30seg), definir una politica de retención de
 datos (no todas las métricas tienen el mismo ciclo de vida)
 
-Impacto técnico muy grande, ten cuidado
+Ante todo, ten en cuenta el impacto técnico, es muy, muy grande.
 
-Lo que la cafeína le hizo a JavaScript, Sergio Arbeo
+### Lo que la cafeína le hizo a JavaScript, Sergio Arbeo
 
 muy divertido
 
