--- a/source/_posts/2016-11-28-mi-codemotion-2016.markdown
+++ b/source/_posts/2016-11-28-mi-codemotion-2016.markdown
@@ -144,12 +144,19 @@ Probablemente más sencillas, más baratas, más apropiadas. O peores, porqué n
 
 Antes de ponernos a implementar la solución, hay que comprender las necesidades
 del cliente, hay que identificar correctamente el problema. Los clientes
-normalmente vienen con soluciones, pero no *saben* lo que quieren. Entendiendo
-bien su problema, podemos mostrarles varias soluciones donde ellos podrán
-elegir la que mejor les convenga. Para conocer el problema, podemos ayudarnos
-de todas estas técnicas de análisis:
+normalmente vienen con soluciones, con *cómo* quieren que se les soluciones el 
+problema que tienen. Es ahí donde debemos pararnos y analizar el problema,
+analizar el *qué*. Entendiendo bien su problema, podemos mostrarles varias
+soluciones donde ellos podrán elegir la que mejor les convenga. Para conocer el
+problema, podemos ayudarnos de todas estas técnicas de análisis: 
 
-<!-- traspa sobre las diferentes técnicas de análisis -->
+{% img center /images/2016/carlosble-analisis.png %}
+
+<div style="text-align: center">
+  <span style="font-size: 60%">
+Slide #15 de <a href="http://www.slideshare.net/carlosble/distinguir-entre-problema-y-solucin">Distinguir entre problema y solución</a> de <a href="http://www.slideshare.net/carlosble">Carlos Blé</a>, reproducida con permiso del autor
+  </span>
+</div>
 
 > Para saber el valor de un producto, compáralo con una hoja de cálculo ~
 > *Carlos Blé*
