Set `codemotion` category to all posts about it

--- a/source/_posts/2016-11-28-mi-codemotion-2016.markdown
+++ b/source/_posts/2016-11-28-mi-codemotion-2016.markdown
@@ -6,7 +6,7 @@ author: Ruben Chavarria
 comments: true
 categories: 
 - events
-- personal
+- codemotion
 published: true
 footer: false
 sidebar: true
