--- a/source/_posts/2017-11-29-mi-codemotion-2017.markdown
+++ b/source/_posts/2017-11-29-mi-codemotion-2017.markdown
@@ -137,7 +137,7 @@ como keynote para cerrar el evento.
 [David Bonilla]: https://twitter.com/david_bonilla
 
 [Codemotion]: http://2017.codemotion.es/
-[colección]: 
+[colección]: /blog/categories/codemotion/
 [IndieMAD]: https://indiemad.org/
 [Notas extendidas del evento]: https://github.com/rchavarria/blog-post-incubator/blob/master/conferences/2017/codemotion/2017-11-25%20-%20codemotion.markdown
 
