--- a/_posts/2019-11-25-commit-conf-2019.markdown
+++ b/_posts/2019-11-25-commit-conf-2019.markdown
@@ -23,6 +23,45 @@ categories:
 - [🎙️ Javier Abadía](https://twitter.com/javierabadia)
 - [🎥 Tal](https://www.youtube.com/watch?v=ihu6sEbWHFE&t=4617)
 - [📝 Slides](link) (not available yet)
+- Rating: ⭐⭐⭐⭐⭐
+
+¿Por qué el miedo conduce a código inmantenible? Como manager, refactorizar
+conlleva un riesgo. Tocas algo que funciona, pero se puede romper.
+
+Típica historia de un proyecto fallido: código duplicado, merges enormes, nada
+de pair programming, conocimiento aislado, no se entiende el código de los
+demás ni hay esfuerzos por hacerlo,...
+
+> Llega un momento en el que cada vez es más atractivo reescribir el proyecto
+>desde cero, lo que hace aún más difícil tener ganas de mejorar el código
+>existente
+
+Imagen: círculo vicioso del mal software
+
+El código legacy no es malo para nada, es un repositorio de decisiones tomadas
+durante muchísimo tiempo. Es la historia viva del proyecto. Esta es la razón
+fundamental para decir no a la reescritura.
+
+Podríamos ver las prácticas de [eXtreme Programming] como la solución a estos
+problemas.
+
+Imagen: círculo virtuoso del refactoring
+
+¿Qué razones podemos dar para refactorizar? Dar sólo razones económicas, nada de
+razones técnicas. De esta forma *Negocio* nos entenderá mejor:
+
+- Es más fácil cambiarlo, para añadir nuevas funcionalidades
+- Es más fácil entenderlo, para resolver bugs más rápidamente
+- ...
+
+*Collective ownership*: el código es de todos, se comparten unas guías de estilo,
+se fomenta el respeto entre los compañeros del equipo,...
+
+En definitiva, comenta varias prácticas de XP, situando el Refactoring en el
+centro de todas ellas.
+
+Charla muy bien expuesta, con historias relacionadas con el tema (storytelling),
+charla muy ensayada seguramente.
 
 ### [DevOps with Docker, Kubernetes and other tools](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5690945286701056/5667812190191616)
 
@@ -74,3 +113,7 @@ categories:
 ## Ideas
 
 ## References
+
+- Libro: bundle sobre PHP, TDD y refactoring de Fran Iglesias
+
+[eXtreme Programming]: http://www.extremeprogramming.org/
