--- a/_posts/2019-11-25-commit-conf-2019.markdown
+++ b/_posts/2019-11-25-commit-conf-2019.markdown
@@ -68,6 +68,32 @@ charla muy ensayada seguramente.
 - [🎙️ Laura Morillo](https://twitter.com/Laura_Morillo)
 - [🎥 Talk](link) (not available yet)
 - [📝 Slides](link) (not available yet)
+- Rating ⭐⭐⭐⭐
+
+Se comienza a hablar de *DevOps* allá por 2009, donde en una conferencia, dos
+trabajadores de Flickr, un desarrollador y un administrador de sistemas presentaron
+cómo desplegaban hasta 10 veces al día.
+
+DevOps trata de colaboración, es como un ciclo infinito.
+
+C.A.L.M.S.: cultura, automatización, lean (acortar ciclos de feedback,...),
+medir (el impacto de los cambios), share (compartir lo aprendido)
+
+> Kubernetes hace lo mismo que el mejor de los sysadmin
+
+Habla de muchas herramientas:
+
+- Docker
+- Kubernetes: y de cómo configurar servicios, pods, instancias,...
+- Prometheus: como herramienta para almacenar series temporales de datos, nos
+sirve para medir
+- Graphana: herramienta de visualización, creación de alertas,...
+
+*NoOps*: concepto que defiende que la colaboración debe ser entre Negocio y
+Desarrollo, porque se presupone que la infraestructura ya debería ser parte de
+Desarrollo (cloud,...).
+
+Me da la impresión de que este concepto lo intenta vender alguien de *cloud*.
 
 ### [How to improve as a developer](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5690945286701056/5729000374665216)
 
@@ -109,6 +135,10 @@ charla muy ensayada seguramente.
 - [El peor lenguaje del mundo](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5137837183729664/5640221722935296)
 - [Git avanzado](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5137837183729664/6331844668686336),
 [📝 Slides](https://www.jesusamieiro.com/wp-content/uploads/2019/11/20191123-Commit-Conf-Git-avanzado-r2.pdf)
+- [How to implement a peer review learning workflow that your team will love](https://www.koliseo.com/events/commit-2019/r4p/5106829466009600/agenda#/5690945286701056/5662705071423488),
+[🎥 Talk](https://www.youtube.com/watch?v=xxFvMF5j99o&t=10040),
+[📝 Slides](https://prezi.com/afludoizu-dx/peer-reviews/?utm_campaign=share&token=37fd6558aa201726510e1827979d9b5911774b6e4a4b4ac38f1003f0ff682f2d&utm_medium=copy)
+
 
 ## Ideas
 
